Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -147,9 +147,7 @@
 <ul><li><span id="TechDraw_CommandVertexCreationGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionVertexAtIntersection.svg&amp;filetimestamp=20240707204444&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionVertexAtIntersection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/de">Hilfsschnittpunkte</a>: F&uuml;gt Hilfspunkte an Schnittpunkten ausgew&auml;hlter Kanten hinzu.</span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/de">Offset Vertex</a>: F&uuml;gt einen Hilfspunkt mit einem bestimmten Versatz von einem ausgew&auml;hlten Knoten hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
 <ul><li><span id="TechDraw_ExtensionDrawCirclesGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/de">Hilfskreis um 1 Punkt</a>: F&uuml;gt einen Hilfskreis basierend auf einem Punkt hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></span></li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle.svg&amp;filetimestamp=20240706150532&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/de">HIlfskreis hinzuf&uuml;gen</a>: F&uuml;gt einen Hilfskreis auf Basis zweier Punkte (Mittelpunkt und Punkt auf der Kreislinie) hinzu.</li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle.svg&amp;filetimestamp=20240706150532&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/de">HIlfskreis durch 2 Punkte</a>: F&uuml;gt einen Hilfskreis auf Basis zweier Punkte (Mittelpunkt und Punkt auf der Kreislinie) hinzu.</li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle3Points.svg&amp;filetimestamp=20240706150618&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/de">Hilfskreis &uuml;ber 3 Punkte hinzuf&uuml;gen</a>: F&uuml;gt einen durch 3 Punkte (der Kreislinie) festgelegten Hilfskreis hinzu.</li></ul></dd></dl>
 </div>
@@ -345,13 +343,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111190120
+Cached time: 20260111190227
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.321 seconds
-Real time usage: 0.440 seconds
-Preprocessor visited node count: 882/1000000
+CPU time usage: 0.275 seconds
+Real time usage: 0.383 seconds
+Preprocessor visited node count: 881/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -361,18 +359,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.028      1 -total
- 25.41%    8.646      1 Template:TechDraw_Tools_navi/de
- 14.72%    5.009     25 Template:Version/de
- 14.47%    4.924      5 Template:VersionPlus/de
- 14.36%    4.888      1 Template:Userdocnavi/de
- 12.45%    4.236      2 Template:Navigation_menu_2
-  8.48%    2.884      2 Template:Docnav/de
-  6.66%    2.265      1 Template:KEY
-  5.99%    2.038      1 Template:TOCright
+100.00%   25.464      1 -total
+ 31.94%    8.132      1 Template:TechDraw_Tools_navi/de
+ 16.57%    4.219      5 Template:VersionPlus/de
+ 13.52%    3.443      2 Template:Navigation_menu_2
+ 11.35%    2.891      2 Template:Docnav/de
+ 11.14%    2.836     25 Template:Version/de
+  7.83%    1.994      1 Template:Userdocnavi/de
+  6.97%    1.775      1 Template:TOCright
+  4.43%    1.128      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111190119 and revision id 1735765. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111190227 and revision id 1735767. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
