--- a/wiki/de/TechDraw_CommandAddOffsetVertex.html
+++ b/wiki/de/TechDraw_CommandAddOffsetVertex.html
@@ -12,7 +12,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -23,7 +22,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Erg&auml;nzungen: Mittellinien/Gewinde  &rarr; Versetzten Punkt hinzuf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Mittellinien/Gewinde &rarr; Knoten versetzen
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -52,7 +51,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -117,15 +115,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111185922
+Cached time: 20260111190236
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.221 seconds
-Preprocessor visited node count: 305/1000000
-Post&#8208;expand include size: 28052/2097152 bytes
-Template argument size: 11155/2097152 bytes
+CPU time usage: 0.071 seconds
+Real time usage: 0.140 seconds
+Preprocessor visited node count: 304/1000000
+Post&#8208;expand include size: 27998/2097152 bytes
+Template argument size: 11101/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -133,18 +131,18 @@ Unstrip post&#8208;expand size: 1393/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   63.176      1 -total
- 30.17%   19.063      2 Template:Docnav/de
- 22.01%   13.904      1 Template:TechDraw_Tools_navi/de
- 12.23%    7.728      1 Template:GuiCommand/de
- 11.71%    7.398      3 Template:MenuCommand
- 11.35%    7.169      1 Template:Userdocnavi/de
-  8.74%    5.524      2 Template:Navigation_menu_2
-  5.99%    3.786      2 Template:Button
-  5.15%    3.252      1 Template:Caption
+100.00%   22.504      1 -total
+ 30.37%    6.834      1 Template:TechDraw_Tools_navi/de
+ 26.64%    5.995      1 Template:Userdocnavi/de
+ 15.51%    3.490      2 Template:Navigation_menu_2
+ 12.80%    2.881      1 Template:GuiCommand/de
+  9.85%    2.217      2 Template:Docnav/de
+  7.82%    1.760      1 Template:Caption
+  5.52%    1.242      2 Template:Button
+  4.20%    0.944      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331299-0!canonical and timestamp 20260111185922 and revision id 1735763. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331299-0!canonical and timestamp 20260111190236 and revision id 1735769. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
