Updated page TechDraw CommandAddOffsetVertex/de

--- a/wiki/de/TechDraw_CommandAddOffsetVertex.html
+++ b/wiki/de/TechDraw_CommandAddOffsetVertex.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw CommandAddOffsetVertex/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+CommandAddOffsetVertex&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_CommandAddOffsetVertex.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CommandAddOffsetVertex (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_CommandAddOffsetVertex.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Ajouter un sommet d&eacute;cal&eacute; (78% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../pl/TechDraw_CommandAddOffsetVertex.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj odsuni&#281;cie wierzcho&#322;ka (100% translated)" lang="pl" dir="ltr">polski</a></li>
@@ -61,16 +61,14 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Einen Knoten ausw&auml;hlen.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, den Befehl aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Add an offset vertex</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Erg&auml;nzungen: Mittellinien/Gewinde &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Add an offset vertex</b> ausw&auml;hlen.</li></ul></li>
-<li>Der Aufgaben-Bereich wird ge&ouml;ffnet.</li>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Knoten versetzen</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Mittellinien/Gewinde &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CommandAddOffsetVertex.svg&amp;filetimestamp=20240708183449&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Knoten versetzen</b> ausw&auml;hlen.</li></ul></li>
+<li>Das Aufgaben-Fenster wird ge&ouml;ffnet.</li>
 <li>Die gew&uuml;nschten (positiven oder negativen) Werte f&uuml;r <b>X-Versatz</b> und <b>Y-Versatz</b> in mm eingeben.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li>
 <li>Ein Hilfspunkt wird hinzugef&uuml;gt.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -115,34 +113,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111190236
+Cached time: 20260111190346
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.140 seconds
-Preprocessor visited node count: 304/1000000
-Post&#8208;expand include size: 27998/2097152 bytes
-Template argument size: 11101/2097152 bytes
+CPU time usage: 0.072 seconds
+Real time usage: 0.195 seconds
+Preprocessor visited node count: 303/1000000
+Post&#8208;expand include size: 27976/2097152 bytes
+Template argument size: 11079/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1393/5000000 bytes
+Unstrip post&#8208;expand size: 1397/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.504      1 -total
- 30.37%    6.834      1 Template:TechDraw_Tools_navi/de
- 26.64%    5.995      1 Template:Userdocnavi/de
- 15.51%    3.490      2 Template:Navigation_menu_2
- 12.80%    2.881      1 Template:GuiCommand/de
-  9.85%    2.217      2 Template:Docnav/de
-  7.82%    1.760      1 Template:Caption
-  5.52%    1.242      2 Template:Button
-  4.20%    0.944      3 Template:MenuCommand
+100.00%   32.714      1 -total
+ 36.95%   12.088      1 Template:TechDraw_Tools_navi/de
+ 24.21%    7.920      2 Template:Navigation_menu_2
+ 18.22%    5.959      1 Template:GuiCommand/de
+ 14.89%    4.871      2 Template:Docnav/de
+  8.52%    2.787      1 Template:Userdocnavi/de
+  7.39%    2.417      1 Template:Caption
+  6.99%    2.287      2 Template:Button
+  4.88%    1.596      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331299-0!canonical and timestamp 20260111190236 and revision id 1735769. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331299-0!canonical and timestamp 20260111190345 and revision id 1735773. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
