--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -149,9 +149,7 @@
 <ul><li><span id="TechDraw_ExtensionDrawCirclesGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/de">Hilfskreis um 1 Punkt</a>: F&uuml;gt einen Hilfskreis basierend auf einem Punkt hinzu. <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle.svg&amp;filetimestamp=20240706150532&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/de">HIlfskreis durch 2 Punkte</a>: F&uuml;gt einen Hilfskreis auf Basis zweier Punkte (Mittelpunkt und Punkt auf der Kreislinie) hinzu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle3Points.svg&amp;filetimestamp=20240706150618&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/de">Hilfskreis durch 3 Punkte</a>: F&uuml;gt einen durch 3 Punkte (der Kreislinie) festgelegten Hilfskreis hinzu.</li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmArc.svg&amp;filetimestamp=20240706150330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/de">Hilfsbogen hinzuf&uuml;gen</a>: F&uuml;gt einen durch drei Punkte festgelegten und gegen den Uhrzeigersinn verlaufenden Kreisbogen hinzu.</li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmArc.svg&amp;filetimestamp=20240706150330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/de">Hilfsbogen</a>: F&uuml;gt einen durch drei Punkte festgelegten und gegen den Uhrzeigersinn verlaufenden Kreisbogen hinzu.</li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLineParallel.svg&amp;filetimestamp=20240706151318&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLineParallel.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/de">Parallele Hilfslinie hinzuf&uuml;gen</a>: F&uuml;gt eine Hilfslinie parallel zu einer anderen Linie durch einen Knotenpunkt verlaufend hinzu.</li></ul></dd></dl>
 </div>
@@ -341,13 +339,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111190322
+Cached time: 20260111190420
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.309 seconds
-Real time usage: 0.471 seconds
-Preprocessor visited node count: 880/1000000
+CPU time usage: 0.325 seconds
+Real time usage: 0.598 seconds
+Preprocessor visited node count: 879/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -357,18 +355,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.114      1 -total
- 33.01%   15.883      1 Template:TechDraw_Tools_navi/de
- 21.70%   10.440      2 Template:Navigation_menu_2
- 12.81%    6.165      1 Template:Userdocnavi/de
- 10.81%    5.202     25 Template:Version/de
- 10.50%    5.050      2 Template:Docnav/de
-  9.59%    4.612      1 Template:KEY
-  9.16%    4.408      5 Template:VersionPlus/de
-  8.14%    3.918      1 Template:TOCright
+100.00%   45.758      1 -total
+ 22.68%   10.380      1 Template:TechDraw_Tools_navi/de
+ 21.86%   10.004      1 Template:Userdocnavi/de
+ 14.54%    6.655      5 Template:VersionPlus/de
+ 13.82%    6.322      2 Template:Navigation_menu_2
+ 11.40%    5.215     25 Template:Version/de
+  7.46%    3.413      1 Template:KEY
+  5.92%    2.709      2 Template:Docnav/de
+  3.53%    1.616      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111190321 and revision id 1735771. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111190419 and revision id 1735775. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
