--- a/wiki/de/TechDraw_ProjectShape.html
+++ b/wiki/de/TechDraw_ProjectShape.html
@@ -3,7 +3,7 @@
 <li><a href="../TechDraw_ProjectShape.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ProjectShape (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_ProjectShape.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Projection de forme (77% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_ProjectShape.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Proietta forma (62% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_ProjectShape.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Rzutowanie kszta&#322;t&oacute;w (77% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_ProjectShape.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rzutowanie kszta&#322;t&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ProjectShape.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw ProjectShape
 (&#1063;&#1077;&#1088;&#1090;&#1105;&#1078; &#1057;&#1087;&#1088;&#1086;&#1077;&#1094;&#1080;&#1088;&#1086;&#1074;&#1072;&#1090;&#1100; &#1060;&#1080;&#1075;&#1091;&#1088;&#1091;) (8% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -13,7 +13,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; TechDraw Ansichten &rarr; Form projizieren...
+<td class="ctEven">TechDraw &rarr; TechDraw-Ansichten &rarr; Form projizieren
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -143,35 +141,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260110171253
+Cached time: 20260111190510
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.110 seconds
-Preprocessor visited node count: 871/1000000
-Post&#8208;expand include size: 33034/2097152 bytes
-Template argument size: 11657/2097152 bytes
+CPU time usage: 0.092 seconds
+Real time usage: 0.171 seconds
+Preprocessor visited node count: 870/1000000
+Post&#8208;expand include size: 33028/2097152 bytes
+Template argument size: 11651/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1458/5000000 bytes
+Unstrip post&#8208;expand size: 1463/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.643      1 -total
- 25.75%    8.147      1 Template:TechDraw_Tools_navi/de
- 19.66%    6.221     12 Template:PropertyData
- 18.97%    6.003     15 Template:Variable
- 16.11%    5.096      3 Template:PropertyData/de
- 10.97%    3.471      2 Template:Navigation_menu_2
-  6.26%    1.980      2 Template:Docnav/de
-  5.57%    1.764      1 Template:TitleProperty
-  5.55%    1.755      1 Template:GuiCommand/de
-  4.99%    1.578      1 Template:Userdocnavi/de
+100.00%   61.264      1 -total
+ 31.45%   19.268     12 Template:PropertyData
+ 27.04%   16.566     15 Template:Variable
+ 18.68%   11.443      1 Template:TechDraw_Tools_navi/de
+  9.17%    5.616     12 Template:Incode
+  6.77%    4.146      3 Template:PropertyData/de
+  6.03%    3.696      2 Template:Navigation_menu_2
+  5.97%    3.656      1 Template:TitleProperty
+  5.59%    3.425     10 Template:TRUE
+  4.75%    2.911      2 Template:Docnav/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:299837-0!canonical and timestamp 20260110171253 and revision id 1731421. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:299837-0!canonical and timestamp 20260111190510 and revision id 1735777. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
