--- a/wiki/de/TechDraw_ProjectShape.html
+++ b/wiki/de/TechDraw_ProjectShape.html
@@ -55,11 +55,8 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Das Werkzeug <b>TechDraw FormProjizieren</b> erzeugt Projektionen von Formen. Die Projektionen werden in der <a href="../index.php?title=3D_Vview/de&amp;action=edit&amp;redlink=1.html" class="new" title="3D Vview/de (page does not exist)">3D-Ansicht</a> erzeugt und nicht auf einem <a href="../de/TechDraw_PageDefault.html" title="TechDraw PageDefault/de">TechDraw-Zeichnungsblatt</a>.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=ProjectShape1_it.png&amp;filetimestamp=20131028210422&amp;.html" class="mw-file-description"><img src="../File/ProjectShape1_it.png" decoding="async" width="350" height="294" class="mw-file-element" data-file-width="350" data-file-height="294"></a></span>
+<p>Das Werkzeug <b>TechDraw FormProjizieren</b> erzeugt Projektionen von Formen. Die Projektionen werden in der <a href="../de/3D_View.html" title="3D View/de">3D-Ansicht</a> erzeugt und nicht auf einem <a href="../de/TechDraw_PageDefault.html" title="TechDraw PageDefault/de">TechDraw-Zeichnungsblatt</a>.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=ProjectShape1_it.png&amp;filetimestamp=20131028210422&amp;.html" class="mw-file-description"><img src="../File/ProjectShape1_it.png" decoding="async" width="350" height="294" class="mw-file-element" data-file-width="350" data-file-height="294"></a></span>
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
@@ -141,13 +138,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111190510
+Cached time: 20260111190532
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.171 seconds
-Preprocessor visited node count: 870/1000000
+CPU time usage: 0.108 seconds
+Real time usage: 0.315 seconds
+Preprocessor visited node count: 869/1000000
 Post&#8208;expand include size: 33028/2097152 bytes
 Template argument size: 11651/2097152 bytes
 Highest expansion depth: 8/100
@@ -157,19 +154,19 @@ Unstrip post&#8208;expand size: 1463/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   61.264      1 -total
- 31.45%   19.268     12 Template:PropertyData
- 27.04%   16.566     15 Template:Variable
- 18.68%   11.443      1 Template:TechDraw_Tools_navi/de
-  9.17%    5.616     12 Template:Incode
-  6.77%    4.146      3 Template:PropertyData/de
-  6.03%    3.696      2 Template:Navigation_menu_2
-  5.97%    3.656      1 Template:TitleProperty
-  5.59%    3.425     10 Template:TRUE
-  4.75%    2.911      2 Template:Docnav/de
+100.00%  101.080      1 -total
+ 33.82%   34.185      1 Template:TechDraw_Tools_navi/de
+ 14.89%   15.046      3 Template:PropertyData/de
+ 13.34%   13.487     15 Template:Variable
+ 13.30%   13.439      2 Template:Navigation_menu_2
+ 12.16%   12.292     12 Template:PropertyData
+  8.68%    8.769      1 Template:Userdocnavi/de
+  6.49%    6.557      1 Template:TitleProperty
+  5.96%    6.020      1 Template:GuiCommand/de
+  4.54%    4.593     12 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:299837-0!canonical and timestamp 20260111190510 and revision id 1735777. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:299837-0!canonical and timestamp 20260111190532 and revision id 1735779. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
