Updated page TechDraw ProjectShape/de

--- a/wiki/de/TechDraw_ProjectShape.html
+++ b/wiki/de/TechDraw_ProjectShape.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ProjectShape/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ProjectShape&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_ProjectShape.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ProjectShape (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_ProjectShape.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Projection de forme (77% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_ProjectShape.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Proietta forma (62% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -60,19 +60,17 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Wahlweise die <a href="../de/3D_View.html" title="3D View/de">3D-Ansicht</a> drehen. Die Objekte werden auf eine Ebene parallel zum Bildschirm projiziert d.h. entlang der Blickrichtung der Kamera der 3D-Ansicht, die standardm&auml;&szlig;ig als <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Direction</b> verwendet wird.</li>
+<ol><li>Wahlweise die <a href="../de/3D_View.html" title="3D View/de">3D-Ansicht</a> drehen. Die Objekte werden auf eine Ebene parallel zum Bildschirm projiziert d. h. entlang der Blickrichtung der Kamera der 3D-Ansicht, die standardm&auml;&szlig;ig als <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Direction</b> verwendet wird.</li>
 <li>Ein oder mehrere Objekte ausw&auml;hlen. F&uuml;r jedes Objekt wird eine eigene Projektion erzeugt.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten das Werkzeug aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ProjectShape.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ProjectShape.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Form projizieren...</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; TechDraw Views &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ProjectShape.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ProjectShape.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Form projizieren...</b> ausw&auml;hlen.</li></ul></li>
-<li>Das Dialogfeld <b>Formen projizieren</b> wird ge&ouml;ffnet. Siehe <a href="#Eigenschaften">Eigenschaften</a>.</li>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ProjectShape.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ProjectShape.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Form projizieren</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; TechDraw-Ansichten &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ProjectShape.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ProjectShape.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Form projizieren</b> ausw&auml;hlen.</li></ul></li>
+<li>Das Dialogfeld <b>Formen projizieren</b> wird ge&ouml;ffnet. Siehe <a href="#Properties">Eigenschaften</a>.</li>
 <li>Die gew&uuml;nschten Optionen einstellen.</li>
-<li>Die gew&auml;hlten Optionen sollten nicht zu einer leeren Projektion f&uuml;hren, weil das einen Fehler verursacht. Bei einem Objekt mit scharfen Kanten, wie etwa <a href="../de/Part_Box.html" title="Part Box/de">Part W&uuml;rfel</a>, muss die Option <b>Sichtbare scharfe Kanten</b> und/oder <b>Verdeckte scharfe Kanten</b> ausgew&auml;hlt werden.</li>
+<li>Die gew&auml;hlten Optionen sollten nicht zu einer leeren Projektion f&uuml;hren, weil das einen Fehler verursacht. Bei einem Objekt mit scharfen Kanten, wie etwa <a href="../de/Part_Box.html" title="Part Box/de">Part Quader</a>, muss die Option <b>Sichtbare scharfe Kanten</b> und/oder <b>Verdeckte scharfe Kanten</b> ausgew&auml;hlt werden.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li>
 <li>Die Projektion wird auf der XY-Ebene dargestellt.</li>
 <li>Wahlweise die <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Placement</b> und/oder <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Direction</b> der Projektion &auml;ndern.</li></ol>
-</div>
 <p><span id="Properties"></span>
 </p>
 <h2><span class="mw-headline" id="Eigenschaften">Eigenschaften</span></h2>
@@ -138,35 +136,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111190532
+Cached time: 20260111190744
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.108 seconds
-Real time usage: 0.315 seconds
-Preprocessor visited node count: 869/1000000
-Post&#8208;expand include size: 33028/2097152 bytes
-Template argument size: 11651/2097152 bytes
+CPU time usage: 0.102 seconds
+Real time usage: 0.238 seconds
+Preprocessor visited node count: 868/1000000
+Post&#8208;expand include size: 33026/2097152 bytes
+Template argument size: 11649/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1463/5000000 bytes
+Unstrip post&#8208;expand size: 1467/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  101.080      1 -total
- 33.82%   34.185      1 Template:TechDraw_Tools_navi/de
- 14.89%   15.046      3 Template:PropertyData/de
- 13.34%   13.487     15 Template:Variable
- 13.30%   13.439      2 Template:Navigation_menu_2
- 12.16%   12.292     12 Template:PropertyData
-  8.68%    8.769      1 Template:Userdocnavi/de
-  6.49%    6.557      1 Template:TitleProperty
-  5.96%    6.020      1 Template:GuiCommand/de
-  4.54%    4.593     12 Template:Incode
+100.00%   78.506      1 -total
+ 20.96%   16.454      1 Template:TechDraw_Tools_navi/de
+ 19.00%   14.918     12 Template:PropertyData
+ 18.98%   14.902     15 Template:Variable
+ 13.89%   10.903      2 Template:Navigation_menu_2
+ 11.46%    8.997      1 Template:TitleProperty
+  9.55%    7.501      3 Template:PropertyData/de
+  9.00%    7.062     12 Template:Incode
+  7.97%    6.256      2 Template:Docnav/de
+  6.13%    4.814      1 Template:GuiCommand/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:299837-0!canonical and timestamp 20260111190532 and revision id 1735779. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:299837-0!canonical and timestamp 20260111190744 and revision id 1735783. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
