--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -151,9 +151,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmCircle3Points.svg&amp;filetimestamp=20240706150618&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmCircle3Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/de">Hilfskreis durch 3 Punkte</a>: F&uuml;gt einen durch 3 Punkte (der Kreislinie) festgelegten Hilfskreis hinzu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionDrawCosmArc.svg&amp;filetimestamp=20240706150330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionDrawCosmArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/de">Hilfsbogen</a>: F&uuml;gt einen durch drei Punkte festgelegten und gegen den Uhrzeigersinn verlaufenden Kreisbogen hinzu.</li></ul>
 <ul><li><span id="TechDraw_ExtensionLinePPGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLineParallel.svg&amp;filetimestamp=20240706151318&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLineParallel.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/de">Parallele Hilfslinie</a>: F&uuml;gt eine Hilfslinie parallel zu einer anderen Linie durch einen Knotenpunkt verlaufend hinzu.</span></li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLinePerpendicular.svg&amp;filetimestamp=20240706151323&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/de">Rechtwinklige Hilfslinie hinzuf&uuml;gen</a>: F&uuml;gt eine Hilfslinie rechtwinklig zu einer anderen Linie durch einen Knotenpunkt verlaufend hinzu.</li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLinePerpendicular.svg&amp;filetimestamp=20240706151323&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/de">Senkrechte Hilfslinie</a>: F&uuml;gt eine Hilfslinie rechtwinklig zu einer anderen Linie durch einen Knotenpunkt verlaufend hinzu.</li></ul>
 <h3><span id="Format.2FOrganize_Dimensions"></span><span class="mw-headline" id="Format/Organize_Dimensions">Format/Organize Dimensions</span></h3>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span id="TechDraw_ExtensionCreateChainDimensionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/de">Horizontale Ma&szlig;kette erstellen</a>: Erstellt ein Abfolge horizontal fluchtender Ma&szlig;e.</span></li></ul></dd></dl>
@@ -337,13 +335,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111190648
+Cached time: 20260111190755
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.330 seconds
-Real time usage: 0.417 seconds
-Preprocessor visited node count: 881/1000000
+CPU time usage: 0.305 seconds
+Real time usage: 0.420 seconds
+Preprocessor visited node count: 880/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -353,18 +351,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.414      1 -total
- 42.54%   12.939      1 Template:TechDraw_Tools_navi/de
- 17.16%    5.220      2 Template:Navigation_menu_2
- 10.95%    3.330      2 Template:Docnav/de
-  9.78%    2.976      5 Template:VersionPlus/de
-  9.50%    2.888      1 Template:Userdocnavi/de
-  8.35%    2.539     25 Template:Version/de
-  6.84%    2.081      1 Template:TOCright
-  3.72%    1.130      1 Template:KEY
+100.00%   29.249      1 -total
+ 32.13%    9.397      1 Template:TechDraw_Tools_navi/de
+ 19.59%    5.730      2 Template:Navigation_menu_2
+ 13.37%    3.912      1 Template:Userdocnavi/de
+ 13.36%    3.909     25 Template:Version/de
+ 11.65%    3.408      2 Template:Docnav/de
+  8.75%    2.559      5 Template:VersionPlus/de
+  6.78%    1.983      1 Template:TOCright
+  6.06%    1.772      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111190648 and revision id 1735781. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111190754 and revision id 1735785. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
