--- a/wiki/de/TechDraw_ProjectShape.html
+++ b/wiki/de/TechDraw_ProjectShape.html
@@ -74,7 +74,7 @@
 <p><span id="Properties"></span>
 </p>
 <h2><span class="mw-headline" id="Eigenschaften">Eigenschaften</span></h2>
-<p>Die Projektion wird von einem <a href="../Part_Feature.html" title="Part Feature">Part Feature</a> abgeleitet und erbt alle Eigenschaften. Sie hat zus&auml;tzlich folgende Eigenschaften:
+<p>Die Projektion wird von einem <a href="../de/Part_Feature.html" title="Part Feature/de">Part Formelement</a> abgeleitet und erbt alle Eigenschaften. Sie hat zus&auml;tzlich folgende Eigenschaften:
 </p><p><span id="Data"></span>
 </p>
 <h3><span class="mw-headline" id="Daten">Daten</span></h3>
@@ -136,12 +136,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111190744
+Cached time: 20260111190814
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.238 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.146 seconds
 Preprocessor visited node count: 868/1000000
 Post&#8208;expand include size: 33026/2097152 bytes
 Template argument size: 11649/2097152 bytes
@@ -152,19 +152,19 @@ Unstrip post&#8208;expand size: 1467/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   78.506      1 -total
- 20.96%   16.454      1 Template:TechDraw_Tools_navi/de
- 19.00%   14.918     12 Template:PropertyData
- 18.98%   14.902     15 Template:Variable
- 13.89%   10.903      2 Template:Navigation_menu_2
- 11.46%    8.997      1 Template:TitleProperty
-  9.55%    7.501      3 Template:PropertyData/de
-  9.00%    7.062     12 Template:Incode
-  7.97%    6.256      2 Template:Docnav/de
-  6.13%    4.814      1 Template:GuiCommand/de
+100.00%   54.119      1 -total
+ 18.06%    9.776     12 Template:PropertyData
+ 17.84%    9.656     10 Template:TRUE
+ 17.33%    9.378     15 Template:Variable
+ 13.04%    7.056      1 Template:TechDraw_Tools_navi/de
+ 10.40%    5.630      3 Template:PropertyData/de
+  9.01%    4.874      1 Template:TitleProperty
+  7.58%    4.103      2 Template:Docnav/de
+  7.24%    3.917      2 Template:Navigation_menu_2
+  7.12%    3.855      1 Template:GuiCommand/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:299837-0!canonical and timestamp 20260111190744 and revision id 1735783. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:299837-0!canonical and timestamp 20260111190813 and revision id 1735787. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
