--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -155,9 +155,7 @@
 <p><span id="Format/Organize_Dimensions"></span>
 </p>
 <h3><span id="Ma.C3.9Fe_formatieren.2Forganisieren"></span><span class="mw-headline" id="Ma&szlig;e_formatieren/organisieren">Ma&szlig;e formatieren/organisieren</span></h3>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span id="TechDraw_ExtensionCreateChainDimensionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/de">Horizontale Ma&szlig;kette erstellen</a>: Erstellt ein Abfolge horizontal fluchtender Ma&szlig;e.</span></li></ul></dd></dl>
-</div>
+<ul><li><span id="TechDraw_ExtensionCreateChainDimensionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/de">Horizontale Ma&szlig;kette</a>: Erstellt ein Abfolge horizontal fluchtender Ma&szlig;e.</span></li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimension.svg&amp;filetimestamp=20240707202153&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateVertChainDimension.html" title="TechDraw ExtensionCreateVertChainDimension/de">Vertikale Ma&szlig;kette erstellen</a>: Erstellt ein Abfolge vertikal fluchtender Ma&szlig;e.</li></ul></dd></dl>
 </div>
@@ -337,13 +335,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111190848
+Cached time: 20260111190942
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.335 seconds
-Real time usage: 0.647 seconds
-Preprocessor visited node count: 881/1000000
+CPU time usage: 0.251 seconds
+Real time usage: 0.300 seconds
+Preprocessor visited node count: 880/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -353,18 +351,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.394      1 -total
- 28.58%    9.829      1 Template:TechDraw_Tools_navi/de
- 15.19%    5.224      5 Template:VersionPlus/de
- 12.89%    4.433      2 Template:Navigation_menu_2
- 11.87%    4.083     25 Template:Version/de
- 10.22%    3.514      1 Template:Userdocnavi/de
-  9.02%    3.102      2 Template:Docnav/de
-  7.61%    2.616      1 Template:TOCright
-  7.29%    2.507      1 Template:KEY
+100.00%   16.520      1 -total
+ 29.90%    4.940      1 Template:TechDraw_Tools_navi/de
+ 19.74%    3.261      2 Template:Navigation_menu_2
+ 11.67%    1.928      1 Template:Userdocnavi/de
+ 11.59%    1.915      2 Template:Docnav/de
+ 11.58%    1.913     25 Template:Version/de
+ 10.79%    1.783      5 Template:VersionPlus/de
+  7.64%    1.263      1 Template:TOCright
+  5.48%    0.906      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111190847 and revision id 1735789. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111190941 and revision id 1735793. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
