--- a/wiki/de/TechDraw_DecorateLine.html
+++ b/wiki/de/TechDraw_DecorateLine.html
@@ -13,7 +13,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; Liniendarstellung &auml;ndern
+<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; Liniendarstellung bearbeiten
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -126,15 +124,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111191048
+Cached time: 20260111191135
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.065 seconds
-Real time usage: 0.097 seconds
-Preprocessor visited node count: 333/1000000
-Post&#8208;expand include size: 29754/2097152 bytes
-Template argument size: 10999/2097152 bytes
+CPU time usage: 0.074 seconds
+Real time usage: 0.113 seconds
+Preprocessor visited node count: 332/1000000
+Post&#8208;expand include size: 29760/2097152 bytes
+Template argument size: 11005/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -142,19 +140,19 @@ Unstrip post&#8208;expand size: 1629/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.449      1 -total
- 29.70%    6.073      1 Template:TechDraw_Tools_navi/de
- 15.71%    3.212      2 Template:Navigation_menu_2
- 15.35%    3.139      2 Template:Docnav/de
- 12.53%    2.562      1 Template:GuiCommand/de
-  8.74%    1.787      6 Template:Button
-  8.36%    1.710      1 Template:MenuCommand
-  8.01%    1.637      1 Template:Userdocnavi/de
-  7.99%    1.635      1 Template:Version/de
-  5.53%    1.131      2 Template:Caption
+100.00%   21.522      1 -total
+ 31.60%    6.800      1 Template:TechDraw_Tools_navi/de
+ 18.59%    4.002      2 Template:Navigation_menu_2
+ 15.80%    3.401      1 Template:GuiCommand/de
+  9.67%    2.080      2 Template:Docnav/de
+  9.61%    2.069      1 Template:Userdocnavi/de
+  7.93%    1.707      2 Template:Caption
+  7.42%    1.596      6 Template:Button
+  6.82%    1.467      1 Template:Version/de
+  6.77%    1.457      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177756-0!canonical and timestamp 20260111191047 and revision id 1735799. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177756-0!canonical and timestamp 20260111191135 and revision id 1735803. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
