Updated page TechDraw DecorateLine/de

--- a/wiki/de/TechDraw_DecorateLine.html
+++ b/wiki/de/TechDraw_DecorateLine.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw DecorateLine/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+DecorateLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_DecorateLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw DecorateLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Apparence des lignes (60% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_DecorateLine.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Aspetto delle linee (60% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -65,13 +65,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Eine Ansicht ausw&auml;hlen oder eine oder mehrere Kanten in einer Ansicht ausw&auml;hlen.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_DecorateLine.svg&amp;filetimestamp=20241127175335&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Liniendarstellung &auml;ndern</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_DecorateLine.svg&amp;filetimestamp=20241127175335&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Liniendarstellung &auml;ndern</b> ausw&auml;hlen.</li>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_DecorateLine.svg&amp;filetimestamp=20241127175335&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Liniendarstellung bearbeiten</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_DecorateLine.svg&amp;filetimestamp=20241127175335&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DecorateLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Liniendarstellung bearbeiten</b> ausw&auml;hlen.</li>
 <li><span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span>: Ein Doppelklick auf eine Linie innerhalb einer Ansicht.</li></ul></li>
-<li>Der Aufgaben-Bereich wird ge&ouml;ffnet.</li>
+<li>Das Aufgaben-Fenster wird ge&ouml;ffnet.</li>
 <li>Wurden Kanten ausgew&auml;hlt, k&ouml;nnen wahlweise im Abschnitt <b>Liniendarstellung</b> ihre <b>Farbe</b>, <b>Stil</b>, (Strich-)<b>St&auml;rke</b> und/oder <b>Sichtbar</b>(keit) angepasst werden.</li>
 <li>Um ausgeblendete Kanten in der Ansicht wieder dauerhaft einzublenden: Wahlweise eine oder mehrere der Schaltfl&auml;chen im Abschnitt <b>Unsichtbare Linien wiederherstellen</b> dr&uuml;cken:
 <ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Alles</span></li>
@@ -79,7 +78,6 @@
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Kosmetisch</span></li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mittellinie</span></li></ul></li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li></ol>
-</div>
 <p><br>
 </p>
 <div class="docnav">
@@ -124,35 +122,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111191135
+Cached time: 20260111191242
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.113 seconds
-Preprocessor visited node count: 332/1000000
-Post&#8208;expand include size: 29760/2097152 bytes
-Template argument size: 11005/2097152 bytes
+CPU time usage: 0.081 seconds
+Real time usage: 0.133 seconds
+Preprocessor visited node count: 331/1000000
+Post&#8208;expand include size: 29766/2097152 bytes
+Template argument size: 11011/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1629/5000000 bytes
+Unstrip post&#8208;expand size: 1633/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.522      1 -total
- 31.60%    6.800      1 Template:TechDraw_Tools_navi/de
- 18.59%    4.002      2 Template:Navigation_menu_2
- 15.80%    3.401      1 Template:GuiCommand/de
-  9.67%    2.080      2 Template:Docnav/de
-  9.61%    2.069      1 Template:Userdocnavi/de
-  7.93%    1.707      2 Template:Caption
-  7.42%    1.596      6 Template:Button
-  6.82%    1.467      1 Template:Version/de
-  6.77%    1.457      1 Template:MenuCommand
+100.00%   25.387      1 -total
+ 27.42%    6.961      1 Template:TechDraw_Tools_navi/de
+ 15.12%    3.839      2 Template:Navigation_menu_2
+ 13.51%    3.430      1 Template:GuiCommand/de
+ 12.80%    3.250      1 Template:Userdocnavi/de
+ 11.13%    2.825      2 Template:Docnav/de
+ 10.77%    2.734      1 Template:Version/de
+  8.75%    2.222      2 Template:Caption
+  6.41%    1.628      1 Template:MenuCommand
+  5.76%    1.462      6 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177756-0!canonical and timestamp 20260111191135 and revision id 1735803. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177756-0!canonical and timestamp 20260111191242 and revision id 1735807. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
